--- a/index.html
+++ b/index.html
@@ -5,48 +5,48 @@
 	<meta charset="utf-8">
 	<title>Template</title>
 	<meta name="viewport" content="initial-scale=1"/>
-	<link rel="stylesheet" media="screen" href="css/screen.css" >
+	<link rel="stylesheet" media="screen" href="css/screen.css">
 	<!--[if IE]><script src="js/html5shiv.js"></script><![endif]-->
 	<script src="js/jquery.js"></script>
 	<script src="js/jquery.lazyload.min.js"></script>
 	<script src="js/common.js"></script>
 </head>
 <body>
-<!-- main -->
-<div class="main">
-	<!-- header -->
-	<header class="header">
-		<div class="header__top">
-			<a class="logo" href="#"></a>
-			<ul class="header__links">
-				<li><a href="#">Luxury Concierge</a></li>
-				<li><a href="#">Property management</a></li>
-				<li class="is-right"><a href="#">Event planning</a></li>
-				<li class="is-right"><a href="#">LA CHIC Catering</a></li>
+<!-- header -->
+<header class="header">
+	<div class="header__top">
+		<a class="logo" href="#"></a>
+		<ul class="header__links">
+			<li><a href="#">Luxury Concierge</a></li>
+			<li><a href="#">Property management</a></li>
+			<li class="is-right"><a href="#">Event planning</a></li>
+			<li class="is-right"><a href="#">LA CHIC Catering</a></li>
+			<li class="is-center"><a href="#">Back to top</a></li>
+		</ul>
+	</div>
+	<div class="header__down">
+		<div class="header__down-in">
+			<!-- nav -->
+			<nav class="nav">
+				<ul>
+					<li class="is-active"><a href="#">Home</a></li>                
+					<li><a href="#">About</a></li>
+					<li><a href="#">Contact</a></li>
+					<li><a href="#">Get Membership</a></li>
+					<li><a href="#">Login</a></li>
+				</ul>
+			</nav>
+			<!-- lang -->
+			<ul class="lang">
+				<li class="is-active"><a href="#">English /</a></li>
+				<li><a href="#">Русский /</a></li>
+				<li><a href="#">Spanish</a></li>
 			</ul>
 		</div>
-		<div class="header__down">
-			<div class="header__down-in">
-				<!-- nav -->
-				<nav class="nav">
-					<ul>
-						<li class="is-active"><a href="#">Home</a></li>                
-						<li><a href="#">About</a></li>
-						<li><a href="#">Contact</a></li>
-						<li><a href="#">Get Membership</a></li>
-						<li><a href="#">Login</a></li>
-					</ul>
-				</nav>
-				<!-- lang -->
-				<ul class="lang">
-					<li class="is-active"><a href="#">English /</a></li>
-					<li><a href="#">Русский /</a></li>
-					<li><a href="#">Spanish</a></li>
-				</ul>
-			</div>
-		</div> 
-	</header>
-	<!-- main__in -->
+	</div> 
+</header>
+<!-- main -->
+<div class="main">
 	<div class="main__in">
 		<div class="main__center">
 			<div class="main__welcome">Welcome to </div>
@@ -57,6 +57,10 @@
 			</div>
 		</div>
 	</div>
+</div>
+<!-- text -->
+<div class="text">
+	<div class="text__in">Mami Exclusive represents  the ultimate luxury for those who have the ways and means to savor the finer things in life. Accurately personalized, we arrange the program around you, your life, your schedule, your needs and your tastes.</div>
 </div>
 <!-- page -->
 <div class="page">
