--- a/index.html
+++ b/index.html
@@ -29,8 +29,8 @@
 			<!-- nav -->
 			<nav class="nav">
 				<ul>
-					<li class="is-active"><a href="#">Home</a></li>                
-					<li><a href="#">About</a></li>
+					<li class="is-active"><a href="#home">Home</a></li>                
+					<li><a href="#about">About</a></li>
 					<li><a href="#">Contact</a></li>
 					<li><a href="#">Get Membership</a></li>
 					<li><a href="#">Login</a></li>
@@ -46,7 +46,7 @@
 	</div> 
 </header>
 <!-- main -->
-<div class="main">
+<div id="home" class="main">
 	<div class="main__in">
 		<div class="main__center">
 			<div class="main__welcome">Welcome to </div>
@@ -63,7 +63,7 @@
 	<div class="text__in">Mami Exclusive represents  the ultimate luxury for those who have the ways and means to savor the finer things in life. Accurately personalized, we arrange the program around you, your life, your schedule, your needs and your tastes.</div>
 </div>
 <!-- page -->
-<div class="page">
+<div id="about" class="page">
 	<a class="page__bg lazy-load" data-original="img/page1.jpg" href="#" style="background-image: url(img/blank.gif)"></a>
 	<nav class="page__nav">
 		<ul>
