--- a/index.html
+++ b/index.html
@@ -6,6 +6,8 @@
 	<title>Template</title>
 	<meta name="viewport" content="initial-scale=1"/>
 	<link rel="stylesheet" media="screen" href="css/screen.css">
+	<link href='http://fonts.googleapis.com/css?family=Roboto:400,300' rel='stylesheet' type='text/css'>
+	<link href='http://fonts.googleapis.com/css?family=Prata' rel='stylesheet' type='text/css'>
 	<!--[if IE]><script src="js/html5shiv.js"></script><![endif]-->
 	<script src="js/jquery.js"></script>
 	<script src="js/jquery.lazyload.min.js"></script>
@@ -29,8 +31,8 @@
 			<!-- nav -->
 			<nav class="nav">
 				<ul>
-					<li class="is-active"><a href="#home">Home</a></li>                
-					<li><a href="#about">About</a></li>
+					<li><a href="home">Home</a></li>                
+					<li><a href="about">About</a></li>
 					<li><a href="#">Contact</a></li>
 					<li><a href="#">Get Membership</a></li>
 					<li><a href="#">Login</a></li>
@@ -45,15 +47,27 @@
 		</div>
 	</div> 
 </header>
-<!-- main -->
-<div id="home" class="main">
-	<div class="main__in">
-		<div class="main__center">
-			<div class="main__welcome">Welcome to </div>
-			<div class="main__title">Miami Exclusive</div>
-			<div class="main__title-sub">Premium Travel and Concierge Services.</div>
-			<div class="main__membership">
-				<a href="#">Membership</a>
+<!-- pager -->
+<ul class="pager">
+	<li><a href="home"></a></li>
+	<li><a href="about"></a></li>
+	<li><a href="#"></a></li>
+	<li><a href="#"></a></li>
+	<li><a href="#"></a></li>
+	<li><a href="#"></a></li>
+</ul>
+<!-- page -->
+<div id="home" class="page">
+	<!-- main -->
+	<div class="main">
+		<div class="main__in">
+			<div class="main__center">
+				<div class="main__welcome">Welcome to </div>
+				<div class="main__title">Miami Exclusive</div>
+				<div class="main__title-sub">Premium Travel and Concierge Services.</div>
+				<div class="main__membership">
+					<a href="#">Membership</a>
+				</div>
 			</div>
 		</div>
 	</div>
