--- a/index.html
+++ b/index.html
@@ -40,8 +40,8 @@
 			</nav>
 			<!-- lang -->
 			<ul class="lang">
-				<li class="is-active"><a href="#">English /</a></li>
-				<li><a href="#">Русский /</a></li>
+				<li><a class="is-active" href="#">English</a><span>/</span></li>
+				<li><a href="#">Русский</a><span>/</span></li>
 				<li><a href="#">Spanish</a></li>
 			</ul>
 		</div>
