added preloaded, but img load on scroll and can see lags

--- a/index.html
+++ b/index.html
@@ -78,7 +78,7 @@
 </div>
 <!-- page -->
 <div id="about" class="page">
-	<a class="page__bg lazy-load" data-original="img/page1.jpg" href="#" style="background-image: url(img/blank.gif)"></a>
+	<a class="page__bg lazy-load" data-original="img/page2.jpg" href="#" style="background-image: url(img/blank.gif)"></a>
 	<nav class="page__nav">
 		<ul>
 			<li><a href="#">About Us</a></li>
@@ -94,16 +94,15 @@
 			<div class="content">Miami Exclusive delivers exceptional quality concierge and errand services. We empower our clients by providing administrative and operational assistance and also offer valuable discounts on a wide range of time management products and services.</div>
 		</div>
 	</div>
+	<!-- preloader -->
+	<div class="preloader"></div>
 </div>
-<!-- page -->
-<div class="page">
-	<a class="page__bg lazy-load" data-original="img/page1.jpg" href="#" style="background-image: url(img/blank.gif)"></a>
-	<div class="page__content page__content_right">
-		<div class="page__content-in">
-			<div class="title">Luxury Concierge</div>
-			<div class="content">Miami Exclusive delivers exceptional quality concierge and errand services. We empower our clients by providing administrative and operational assistance and also offer valuable discounts on a wide range of time management products and services.</div>
-		</div>
+<!-- footer -->
+<footer class="footer">
+	<div class="footer__text">Premium Travel and Concierge Services.</div>
+	<div class="copyright">
+		<a href="#">SITE BY WORKFILMS</a>
 	</div>
-</div>
+</footer>
 </body>
 </html>
