--- a/index.html
+++ b/index.html
@@ -78,24 +78,43 @@
 </div>
 <!-- page -->
 <div id="about" class="page">
-	<a class="page__bg lazy-load" data-original="img/page2.jpg" href="#" style="background-image: url(img/blank.gif)"></a>
+	<!-- <a class="page__bg lazy-load" data-original="img/page2.jpg" href="#" style="background-image: url(img/blank.gif)"></a> -->
+	<a class="page__bg" href="#">
+		<span class="page__bg-img" style="background-image: url(img/page2.jpg)"></span>
+	</a>
 	<nav class="page__nav">
 		<ul>
-			<li><a href="#">About Us</a></li>
-			<li><a href="#">Our Team</a></li>
-			<li><a href="#">Our Philosophy</a></li>
-			<li><a href="#">Our Mission</a></li>
-			<li><a href="#">Our Clients</a></li>
+			<li><a class="is-active" href="page-tab-1">About Us</a></li>
+			<li><a href="page-tab-2">Our Team</a></li>
+			<li><a href="page-tab-3">Our Philosophy</a></li>
+			<li><a href="page-tab-4">Our Mission</a></li>
+			<li><a href="page-tab-5">Our Clients</a></li>
 		</ul>
 	</nav>
 	<div class="page__content">
-		<div class="page__content-in">
+		<div id="page-tab-1" class="page__content-in is-active">
 			<div class="title">About Us</div>
+			<div class="content">Miami Exclusive delivers exceptional quality concierge and errand services. We empower our clients by providing administrative and operational assistance and also offer valuable discounts on a wide range of time management products and services.</div>
+		</div>
+		<div id="page-tab-2" class="page__content-in">
+			<div class="title">Our Team</div>
+			<div class="content">Miami Exclusive delivers exceptional quality concierge and errand services. We empower our clients by providing administrative and operational assistance and also offer valuable discounts on a wide range of time management products and services.</div>
+		</div>
+		<div id="page-tab-3" class="page__content-in">
+			<div class="title">Our Philosophy</div>
+			<div class="content">Miami Exclusive delivers exceptional quality concierge and errand services. We empower our clients by providing administrative and operational assistance and also offer valuable discounts on a wide range of time management products and services.</div>
+		</div>
+		<div id="page-tab-4" class="page__content-in">
+			<div class="title">Our Mission</div>
+			<div class="content">Miami Exclusive delivers exceptional quality concierge and errand services. We empower our clients by providing administrative and operational assistance and also offer valuable discounts on a wide range of time management products and services.</div>
+		</div>
+		<div id="page-tab-5" class="page__content-in">
+			<div class="title">Our Clients</div>
 			<div class="content">Miami Exclusive delivers exceptional quality concierge and errand services. We empower our clients by providing administrative and operational assistance and also offer valuable discounts on a wide range of time management products and services.</div>
 		</div>
 	</div>
 	<!-- preloader -->
-	<div class="preloader"></div>
+	<!-- <div class="preloader"></div> -->
 </div>
 <!-- footer -->
 <footer class="footer">
