--- a/index.html
+++ b/index.html
@@ -17,13 +17,12 @@
 <!-- header -->
 <header class="header">
 	<div class="header__top">
-		<a class="logo" href="#"></a>
+		<div class="logo"></div>
 		<ul class="header__links">
 			<li><a href="#">Luxury Concierge</a></li>
 			<li><a href="#">Property management</a></li>
 			<li class="is-right"><a href="#">Event planning</a></li>
 			<li class="is-right"><a href="#">LA CHIC Catering</a></li>
-			<li class="is-center"><a href="#">Back to top</a></li>
 		</ul>
 	</div>
 	<div class="header__down">
@@ -92,7 +91,7 @@
 		</ul>
 	</nav>
 	<div class="page__content">
-		<div id="page-tab-1" class="page__content-in is-active">
+		<div id="page-tab-1" class="page__content-in">
 			<div class="title">About Us</div>
 			<div class="content">Miami Exclusive delivers exceptional quality concierge and errand services. We empower our clients by providing administrative and operational assistance and also offer valuable discounts on a wide range of time management products and services.</div>
 		</div>
