fix bg position

--- a/index.html
+++ b/index.html
@@ -139,11 +139,11 @@
 	</a>
 	<nav class="page__nav">
 		<ul>
-			<li><a href="page-tab-21">About Us</a></li>
-			<li><a href="page-tab-22">Our Team</a></li>
-			<li><a href="page-tab-23">Our Philosophy</a></li>
-			<li><a href="page-tab-24">Our Mission</a></li>
-			<li><a href="page-tab-25">Our Clients</a></li>
+			<li><a href="page-tab-21" data-background="red">About Us</a></li>
+			<li><a href="page-tab-22" data-background="pink">Our Team</a></li>
+			<li><a href="page-tab-23" data-background="blue">Our Philosophy</a></li>
+			<li><a href="page-tab-24" data-background="black">Our Mission</a></li>
+			<li><a href="page-tab-25" data-background="white">Our Clients</a></li>
 		</ul>
 	</nav>
 	<div class="page__content">
