two colors and bg image

--- a/index.html
+++ b/index.html
@@ -92,15 +92,15 @@
 	</a>
 	<nav class="page__nav">
 		<ul>
-			<li><a href="page-tab-1" data-background="red">About Us</a></li>
-			<li><a href="page-tab-2" data-background="green">Our Team</a></li>
+			<li><a href="page-tab-1" data-background="#67adda" data-backgroundmenu="#3a79a1">About Us</a></li>
+			<li><a href="page-tab-2" data-background="green" data-backgroundmenu="#3a79a1">Our Team</a></li>
 			<li><a href="page-tab-3" data-background="blue">Our Philosophy</a></li>
 			<li><a href="page-tab-4" data-background="green">Our Mission</a></li>
 			<li><a href="page-tab-5" data-background="red">Our Clients</a></li>
 		</ul>
 	</nav>
 	<div class="page__content">
-		<div class="page__content-bg" style="background: red"></div>
+		<div class="page__content-bg" style="background: green"></div>
 		<div id="page-tab-1" class="page__content-in">
 			<div class="title">About Us</div>
 			<div class="content">Miami Exclusive delivers exceptional quality concierge and errand services. We empower our clients by providing administrative and operational assistance and also offer valuable discounts on a wide range of time management products and services.</div>
@@ -147,6 +147,7 @@
 		</ul>
 	</nav>
 	<div class="page__content">
+		<div class="page__content-bg" style="background: green"></div>
 		<div id="page-tab-21" class="page__content-in">
 			<div class="title">About Us</div>
 			<div class="content">Miami Exclusive delivers exceptional quality concierge and errand services. We empower our clients by providing administrative and operational assistance and also offer valuable discounts on a wide range of time management products and services.</div>
